profiles/overlays/local/prometheus-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-lb-service
spec:
  selector:
    app: example
  ports:
    - port: 9090
      targetPort: 8090
  type: LoadBalancer
