profiles/overlays/local/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana-ingress
spec:
  rules:
    - host: grafana.tools.cloud.sap
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
