profiles/overlays/local/jaeger-lb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jaeger-ingress
spec:
  rules:
    - host: jaeger.tools.cloud.sap
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: tracing
                port:
                  number: 16686
