profiles/overlays/local/kiali-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kiali-ingress
spec:
  rules:
    - host: kiali.tools.cloud.sap
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: kiali
                port:
                  number: 20001
